# vista-hackathon

./: .dockerignore  .gitignore  DEPLOYMENT.md  README.md  deploy-all.sh  deploy-backend.sh  deploy-frontend.sh  docker-compose.yml  fly.toml  package-lock.json  setup.md
.ai/: README.md  agent-orchestration.md  concurrency-model.md  runtime-architecture.md  style-guide-requirements.md  vertical-slice-template.md
.ai/agents/: profitability-agent.md  project-management-agent.md  quotes-agent.md  resourcing-agent.md
backend/: .dockerignore  Dockerfile  PROJECT_MANAGEMENT_README.md  fly.toml  pyproject.toml  test_agents.py  test_project_management.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  orchestrator.py  profitability.py  project_management.py  quotes.py  resource_management.py  resourcing.py
backend/app/ai/agents/: __init__.py  orchestrator.py  project_management.py  resource_management.py
backend/app/events/: bus.py
backend/app/models/: __init__.py  project.py
backend/app/services/: profitabilityService.py  projectService.py  projectTaskService.py
backend/app/utils/: __init__.py  supabase_client.py
frontend/: .dockerignore  Dockerfile  env.example  fly.toml  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
migration/create_mock_data_scripts/: 00100_seniorities_data.sql  00200_staffers_data.sql  00300_skills_data.sql  00400_staffer_rates_data.sql  00500_staffer_time_off_data.sql  00600_staffer_skills_data.sql  00700_addresses_data.sql  00800_agents_data.sql  00901_clients_data.sql  (+10 more)
(+127 files in other folders)
